--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,19 @@ stages:
   - package
 
 package-spiSlaveLinux:
-  image: registry.swissqprint.com/sqp/devops/runner/conan:0.4-py27-debian
+  image: registry.swissqprint.com/sqp/devops/runner/conan:0.9
   stage: package
   tags:
-    - linux
     - docker
+    - linux
+    - x86_64
   only:
     - tags
   script:
     - conan user -p AP65yNr4jrB9SRv6neyGv6kxnXs3KmuStoYJo4 -r inhouse gitlab -s
-    - conan remove libsqpSpiSlaveLinux -f
-    - conan create . sqp/release -pr linux64_x_armv7hf_gcc8_release --update
-    - conan upload libsqpSpiSlaveLinux --all -r=inhouse -c
+    - conan remove $PROJECTNAME -f
+    - conan create . sqp/release --update -pr linux64_x_yocto-arm57xx-armv7hf-linux-gnueabi_gcc9_release -o -s build_type=Release
+    - conan upload $PROJECTNAME --all -r=inhouse -c
+
 
 
