--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  PROJECTNAME: sqpSpiSlaveLinux
+  PROJECTNAME: libsqpSpiSlaveLinux
 
 stages:
   - package
@@ -14,9 +14,8 @@ package-spiSlaveLinux:
   only:
     - tags
   script:
-    - conan user -p AP65yNr4jrB9SRv6neyGv6kxnXs3KmuStoYJo4 -r inhouse gitlab -s
     - conan remove $PROJECTNAME -f
-    - conan create . sqp/release --update -pr linux64_x_yocto-arm57xx-armv7hf-linux-gnueabi_gcc9_release -s build_type=Release
+    - conan create . sqp/release --update -pr linux64_x_armv7hf-none-eabi_gcc9 -s build_type=Release
     - conan upload $PROJECTNAME --all -r=inhouse -c
 
 
